test/1.2/errors/T_EARRAY.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

bank b {
    register r[i in 0..3] size 4 @ undefined;

    group g[i in 0..3] {
        register r size 4 @ undefined;
    }
}

attribute a[2] { parameter allocate_type = "uint32"; }

method init() {
    /// ERROR EARRAY
    $b.r == 0;
    /// ERROR EARRAY
    $b.r;
    /// ERROR EARRAY
    $b.r.size == 4;
    /// ERROR EARRAY
    $b.g.r == 4;
    /// ERROR EARRAY
    $a(0);
    // Bug 9009
    /// ERROR EARRAY
    $a++;
    /// ERROR EARRAY
    select x in ($b.r)
        where (true) ; else ;
}
